jlatexmath (0.9.2)
        * Add cfrac macro

	* Possibility to have empty columns in array
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

jlatexmath (0.9.1)
	* Few modifications in fop-plugin and improve \includegraphics
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

	* Moved fop.properties at the root directory (this is only needed to
	build and run fop plugin)

	* examples/Export/build.xml uses fop.properties

 -- Sylvestre Ledru <sylvestre.ledru@scilab.org> Tue, 16 Feb 2010 10:51:04 +0100

jlatexmath (0.9) 
	 * Avoid two generations of labels with fop.
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Fri, 12 Feb 2010 18:23:56 +0100

jlatexmath (0.8.9) 
	 * Add new environments of amsmath : gather, flalign, alignat...
	 
	 * Add commands genfrac, rule, underscore, hdotsfor, multicolumn, ...
	 
	 * Add commands \textsuperscript et \textsubscript
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Thu, 11 Feb 2010 15:32:27 +0100

jlatexmath (0.8.7)
	 * Add the command \prescript

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Mon, 11 Jan 2010 19:07:18 +0100

	 * Add the commands \mathclap, \mathrlap, \mathllap, \clap, \rlap and \llap

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Mon, 11 Jan 2010 16:29:51 +0100
	   
  	 * A basic (without options) \includegraphics command added

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sun, 10 Jan 2010 22:17:04 +0100

jlatexmath (0.8.6)
  	 * \over, \hspace and \vspace are supported

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sun, 10 Jan 2010 14:59:45 +0100

jlatexmath (0.8.5)
  	 * add a stroke T

	 * Fix few bugs of rendering : cedilla, mathbf

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sun, 03 Jan 2010 18:35:12 +0100
	 * Complete unicode table for latin alphabets

	 * Fix few bugs of rendering

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sat, 02 Jan 2010 20:03:36 +0100

jlatexmath (0.8.4)
	 * Greek support added
